Chrome Extention update

--- a/RajasthanPolice-ChromeExtension/popup.html
+++ b/RajasthanPolice-ChromeExtension/popup.html
@@ -65,9 +65,9 @@
             <div style="margin-left: 12px; display: flex">
               <!-- <img src="./images/trust.png" class="trust" /> -->
               <h3 style="color: grey; align-items: center; display: flex">
-                URL pattern score :
+                URL pattern score 
               </h3>
-              <h3 id="urlScore">80</h3>
+              <h3 id="urlScore"> : loading.....</h3>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
             <div style="margin-left: 12px">
               <h3 style="color: grey">Email</h3>
               <div style="display: flex; line-height: 0px">
-                <h3 style="color: #f18282; margin-top: 5px">
+                <h3 id="emailId" style="color: #f18282; margin-top: 5px">
                   brohithkumar02@gmail.com
                 </h3>
                 <img
